# Oxide

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
oxide-core/: CHANGELOG.md  Cargo.toml  README.md
oxide-core/examples/: agent.rs  agent_with_context.rs  agent_with_eternalai.rs  agent_with_grok.rs  agent_with_loaders.rs  agent_with_ollama.rs  agent_with_tools.rs  anthropic_agent.rs  calculator_chatbot.rs  chain.rs  cohere_connector.rs  debate.rs  extractor.rs  gemini_agent.rs  gemini_embeddings.rs  loaders.rs  multi_agent.rs  multi_extract.rs  perplexity_agent.rs  rag.rs  rag_dynamic_tools.rs  sentiment_classifier.rs  simple_model.rs  vector_search.rs  vector_search_cohere.rs  xai_embeddings.rs
oxide-core/oxide-core-derive/: Cargo.toml
oxide-core/src/: agent.rs  completion.rs  extractor.rs  lib.rs  tool.rs
oxide-core/tests/: embed_macro.rs
oxide-core/yani-core-derive/: Cargo.toml
oxide-lancedb/: CHANGELOG.md  Cargo.toml
oxide-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs
oxide-mongodb/: CHANGELOG.md  Cargo.toml
oxide-mongodb/src/: lib.rs
oxide-mongodb/tests/: integration_tests.rs
oxide-neo4j/: CHANGELOG.md  Cargo.toml
oxide-neo4j/examples/: vector_search_movies_add_embeddings.rs  vector_search_movies_consume.rs  vector_search_simple.rs
oxide-neo4j/src/: lib.rs  vector_index.rs
oxide-neo4j/tests/: integration_tests.rs
oxide-qdrant/: CHANGELOG.md  Cargo.toml  README.md
oxide-qdrant/examples/: qdrant_vector_search.rs
oxide-sqlite/: CHANGELOG.md  README.md
oxide-sqlite/examples/: vector_search_sqlite.rs
yani-core/: CHANGELOG.md  Cargo.toml  README.md
yani-core/examples/: agent.rs  agent_with_context.rs  agent_with_eternalai.rs  agent_with_grok.rs  agent_with_loaders.rs  agent_with_ollama.rs  chain.rs  (+19 more)
yani-lancedb/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
yani-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
yani-lancedb/examples/fixtures/: lib.rs
yani-lancedb/src/: lib.rs
yani-lancedb/src/utils/: deserializer.rs  mod.rs
yani-lancedb/tests/: integration_tests.rs
yani-lancedb/tests/fixtures/: lib.rs
yani-mongodb/: CHANGELOG.md  Cargo.toml  README.md
yani-mongodb/examples/: vector_search_mongodb.rs
yani-mongodb/src/: lib.rs
yani-mongodb/tests/: integration_tests.rs
yani-neo4j/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
yani-qdrant/: CHANGELOG.md  Cargo.toml  README.md
yani-sqlite/: CHANGELOG.md  Cargo.toml  README.md
(+73 files in other folders)
