[package]
name = "oxide-mongodb"
version = "0.2.2"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "MongoDB implementation of a oxide vector store."
repository = "https://github.com/monami8484/oxide"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
mongodb = "3.1.0"
oxide-core = { path = "../oxide-core", version = "0.6.1" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"

[dev-dependencies]
anyhow = "1.0.86"
httpmock = "0.7.0"
testcontainers = "0.23.1"
tokio = { version = "1.38.0", features = ["macros"] }
tokio-test = "0.4.4"

[[example]]
name = "vector_seoxideh_mongodb"
required-features = ["oxide-core/derive"]

[[test]]
name = "integration_tests"
required-features = ["oxide-core/derive"]
